<resources>
    <string name="Airpump测试">空气泵测试</string>
    <string name="BAOLIU">保留</string>
    <string name="BIB冷水排阀测试">BIB冷水排阀测试</string>
    <string name="BIB冷水泵测试">BIB冷水泵测试</string>
    <string name="BIB常规排阀测试">BIB常规排阀测试</string>
    <string name="BIB果浆定量测试">BIB果浆定量测试</string>
    <string name="BIB果浆电机测试">BIB果浆电机测试</string>
    <string name="BIB热水排阀测试">BIB热水排阀测试</string>
    <string name="BIB管道清洗">BIB管道清洗</string>
    <string name="BIB管道清洗全部">BIB管道清洗(全部)</string>
    <string name="BIB糖浆模组">BIB糖浆模组</string>
    <string name="BIB螺线管测试">BIB螺线管测试</string>
    <string name="BIB进水阀测试">BIB进水阀测试</string>
    <string name="BrewerActionControl_0">接粉位(dosage)</string>
    <string name="BrewerActionControl_1">酿造位(brewing)</string>
    <string name="BrewerActionControl_2">二次挤饼(last squeeze)</string>
    <string name="BrewerActionControl_3">清洁(cleaning)</string>
    <string name="BrewerActionControl_4">冲洗(flush)</string>
    <string name="BrewerActionControl_5">维护位(Maintenance)</string>
    <string name="BrewerActionControl_6">结束维护(End Maintenance )</string>
    <string name="BrewerActionControl_7">复位(init)</string>
    <string name="BrewerActionControl_8">腔室(chamber)</string>
    <string name="BrewerActionControl_9">净化(purification)</string>
    <string name="BrewerActionControl_A">循环(Cycle)</string>
    <string name="BrewerTeaAction_0">初始化(init)</string>
    <string name="BrewerTeaAction_1">密封(seal)</string>
    <string name="BrewerTeaAction_2">加水(water_input)</string>
    <string name="BrewerTeaAction_3">剂量(dosage)</string>
    <string name="BrewerTeaAction_4">刮渣片位置(wipe_position)</string>
    <string name="BrewerTeaAction_5">维护(Maintenance)</string>
    <string name="BrewerTeaAction_6">刮渣片移动(wipe_moving)</string>
    <string name="BrewerTeaAction_7">循环(Cycle)</string>
    <string name="CUP板配置情况">CUP板配置情况</string>
    <string name="Cup板状态">Cup板状态</string>
    <string name="ES1咖啡酿造压力">ES1咖啡酿造压力</string>
    <string name="ES2咖啡酿造压力">ES2咖啡酿造压力</string>
    <string name="ES2流速控制">ES2流速控制</string>
    <string name="ES_FB保压测试">ES/FB保压测试</string>
    <string name="ES冲泡器1浸泡清洁">ES冲泡器1浸泡清洁</string>
    <string name="ES冲泡器2浸泡清洁">ES冲泡器2浸泡清洁</string>
    <string name="ES冲泡器和FB泡茶器并行浸泡清洁">ES冲泡器和FB泡茶器并行浸泡清洁</string>
    <string name="ES冲泡器首杯加热排水参数">ES冲泡器首杯加热排水参数</string>
    <string name="ES流速控制">ES流速控制</string>
    <string name="ES锅炉温度设置">ES锅炉温度设置</string>
    <string name="ES风扇">ES风扇</string>
    <string name="ES首杯预冲洗">ES首杯预冲洗</string>
    <string name="EnableStates2_0">ES2产品禁止</string>
    <string name="EnableStates2_1">BIB系统故障</string>
    <string name="EnableStates2_2">BIB系统忙</string>
    <string name="EnableStates2_3">气体饮料禁止</string>
    <string name="EnableStates2_4">出冰禁止</string>
    <string name="EnableStates2_5">热水产品禁止</string>
    <string name="EnableStates2_6">冷水产品禁止</string>
    <string name="EnableStates2_7">24V电压异常</string>
    <string name="EnableStates2_8">BIB料盒8不能制作</string>
    <string name="EnableStates2_9">BIB料盒7不能制作</string>
    <string name="EnableStates2_A">BIB料盒6不能制作</string>
    <string name="EnableStates2_B">BIB料盒5不能制作</string>
    <string name="EnableStates2_C">BIB料盒4不能制作</string>
    <string name="EnableStates2_D">BIB料盒3不能制作</string>
    <string name="EnableStates2_E">BIB料盒2不能制作</string>
    <string name="EnableStates2_F">BIB料盒1不能制作</string>
    <string name="EnableStates_0">ES产品不能做</string>
    <string name="EnableStates_1">现金设备故障</string>
    <string name="EnableStates_2">水路板连接异常</string>
    <string name="EnableStates_3">大门未关</string>
    <string name="EnableStates_4">分杯板忙</string>
    <string name="EnableStates_5">杯桶无杯</string>
    <string name="EnableStates_6">小门有杯</string>
    <string name="EnableStates_7">水箱水位低</string>
    <string name="EnableStates_8">料盒8不能制作</string>
    <string name="EnableStates_9">料盒7不能制作</string>
    <string name="EnableStates_A">料盒6不能制作</string>
    <string name="EnableStates_B">料盒5不能制作</string>
    <string name="EnableStates_C">料盒4不能制作</string>
    <string name="EnableStates_D">料盒3不能制作</string>
    <string name="EnableStates_E">料盒2不能制作</string>
    <string name="EnableStates_F">料盒1不能制作</string>
    <string name="FB1出2段水间隔">FB1出2段水间隔</string>
    <string name="FB1泡茶时间">FB1泡茶时间</string>
    <string name="FB1空气泵吹气时间">FB1空气泵吹气时间</string>
    <string name="FB1空气泵速度">FB1空气泵速度</string>
    <string name="FB1第一段水比例">FB1第一段水比例</string>
    <string name="FB2出2段水间隔">FB2出2段水间隔</string>
    <string name="FB2泡茶器出2段水间隔">FB2泡茶器出2段水间隔</string>
    <string name="FB2泡茶时间">FB2泡茶时间</string>
    <string name="FB2空气泵吹气时间">FB2空气泵吹气时间</string>
    <string name="FB2空气泵速度">FB2空气泵速度</string>
    <string name="FB2第一段水比例">FB2第一段水比例</string>
    <string name="FB泡茶器1浸泡清洁">FB泡茶器1浸泡清洁</string>
    <string name="FB泡茶器2浸泡清洁">FB泡茶器2浸泡清洁</string>
    <string name="FB清洗时搅拌器功率">FB清洗时搅拌器功率</string>
    <string name="FB清洗时齿轮泵功率">FB清洗时齿轮泵功率</string>
    <string name="FB预加热出水量">FB预加热出水量</string>
    <string name="FB预加热出水间隔时间">FB预加热出水间隔时间</string>
    <string name="FB首杯预热温度阈值">FB首杯预热温度阈值</string>
    <string name="IO板控抽水泵流速">IO板控抽水泵流速</string>
    <string name="IO板控进水泵流量统计">IO板控进水泵流量统计</string>
    <string name="IO板无响应">IO板无响应</string>
    <string name="IO板类型">IO板类型</string>
    <string name="IO配置程序升级">IO配置程序升级</string>
    <string name="IceMakerComponent_0">保留</string>
    <string name="IceMakerComponent_1">保留</string>
    <string name="IceMakerComponent_2">保留</string>
    <string name="IceMakerComponent_3">保留</string>
    <string name="IceMakerComponent_4">电子秤连接</string>
    <string name="IceMakerComponent_5">门电机</string>
    <string name="IceMakerComponent_6">蒸发器温度传感器</string>
    <string name="IceMakerComponent_7">冷凝器温度传感器</string>
    <string name="LED灯带段数">LED灯带段数</string>
    <string name="LED灯带颜色">LED灯带颜色</string>
    <string name="MDB刷卡2">MDB刷卡2</string>
    <string name="MDB刷卡支付">MDB刷卡支付</string>
    <string name="MDB现金支付">MDB现金支付</string>
    <string name="MacSpecialConfigs_0">门糖</string>
    <string name="MacSpecialConfigs_1">预留</string>
    <string name="MacSpecialConfigs_2">预留</string>
    <string name="MacSpecialConfigs_3">冷热</string>
    <string name="MacSpecialConfigs_4">预留</string>
    <string name="MacSpecialConfigs_5">预留</string>
    <string name="MacSpecialConfigs_6">预留</string>
    <string name="MacSpecialConfigs_7">预留</string>
    <string name="MacSpecialConfigs_8">预留</string>
    <string name="MacSpecialConfigs_9">BIB</string>
    <string name="MacSpecialConfigs_A">预留</string>
    <string name="MacSpecialConfigs_B">简化</string>
    <string name="MacSpecialConfigs_C">制冰机</string>
    <string name="MacSpecialConfigs_D">用户杯</string>
    <string name="MacSpecialConfigs_E">全冷热</string>
    <string name="MacSpecialConfigs_F">预留</string>
    <string name="MixMotors_0">电机1</string>
    <string name="MixMotors_1">电机2</string>
    <string name="MixMotors_2">电机3</string>
    <string name="MixMotors_3">电机4</string>
    <string name="MixMotors_4">电机5</string>
    <string name="MixMotors_5">电机6</string>
    <string name="MotorDirection_0">反转</string>
    <string name="MotorDirection_1">正转</string>
    <string name="OperationBIBPipelineNames_0">BIB管道1</string>
    <string name="OperationBIBPipelineNames_1">BIB管道2</string>
    <string name="OperationBIBPipelineNames_2">BIB管道3</string>
    <string name="OperationBIBPipelineNames_3">BIB管道4</string>
    <string name="OperationBIBPipelineNames_4">BIB管道5</string>
    <string name="OperationBIBPipelineNames_5">BIB管道6</string>
    <string name="OperationBIBPipelineNames_6">BIB管道7</string>
    <string name="OperationBIBPipelineNames_7">BIB管道8</string>
    <string name="OperationCanisterMotorNames_0">料盒电机1</string>
    <string name="OperationCanisterMotorNames_1">料盒电机2</string>
    <string name="OperationCanisterMotorNames_2">料盒电机3</string>
    <string name="OperationCanisterMotorNames_3">料盒电机4</string>
    <string name="OperationCanisterMotorNames_4">料盒电机5</string>
    <string name="OperationCanisterMotorNames_5">料盒电机6</string>
    <string name="OperationCanisterMotorNames_6">料盒电机7</string>
    <string name="OperationCanisterMotorNames_7">料盒电机8</string>
    <string name="OperationCanisterNames_0">料盒1</string>
    <string name="OperationCanisterNames_1">料盒2</string>
    <string name="OperationCanisterNames_2">料盒3</string>
    <string name="OperationCanisterNames_3">料盒4</string>
    <string name="OperationCanisterNames_4">料盒5</string>
    <string name="OperationCanisterNames_5">料盒6</string>
    <string name="OperationCanisterNames_6">料盒7</string>
    <string name="OperationCanisterNames_7">料盒8</string>
    <string name="OperationMixerNames_0">搅拌器1</string>
    <string name="OperationMixerNames_1">搅拌器2</string>
    <string name="OperationMixerNames_2">搅拌器3</string>
    <string name="OperationMixerNames_3">搅拌器4</string>
    <string name="OperationMixerNames_4">搅拌器5</string>
    <string name="OperationMixerNames_5">搅拌器6</string>
    <string name="REDBOX">RED BOX</string>
    <string name="SensorStates_0">未配置FB密封传感器2</string>
    <string name="SensorStates_1">未配置废水探针传感器</string>
    <string name="SensorStates_10">未配置FB2密封传感器2</string>
    <string name="SensorStates_11">未配置FB2密封传感器</string>
    <string name="SensorStates_12">未配置FB2刮渣传感器</string>
    <string name="SensorStates_13">未配置FB密封传感器</string>
    <string name="SensorStates_14">未配置FB刮渣传感器</string>
    <string name="SensorStates_15">未配置分杯盖成功传感器</string>
    <string name="SensorStates_16">未配置杯盖有料传感器</string>
    <string name="SensorStates_17">未配置自动门开门检测传感器</string>
    <string name="SensorStates_2">未配置水盒探针传感器</string>
    <string name="SensorStates_3">未配置滴水探针传感器</string>
    <string name="SensorStates_4">未配置滴水hall传感器</string>
    <string name="SensorStates_5">净水桶检测2传感器离开</string>
    <string name="SensorStates_6">净水桶检测1传感器离开</string>
    <string name="SensorStates_7">未配置咖啡豆IR传感器</string>
    <string name="SensorStates_8">未配置大门hall传感器</string>
    <string name="back_to_group_finish_make">制作完成返回分组首页</string>
    <string name="bean">咖啡豆</string>
    <string name="canister_id">ID</string>
    <string name="common_empty_log">清除日志</string>
    <string name="common_machinelog_code">代码</string>
    <string name="common_machinelog_desc">描述</string>
    <string name="common_machinelog_help">帮助</string>
    <string name="common_machinelog_time">时间</string>
    <string name="common_machinelog_warn">故障&amp;警告</string>
    <string name="group_layou_1">排列方式1</string>
    <string name="group_layou_2">排列方式2</string>
    <string name="group_management">分组管理</string>
    <string name="group_method">分组方式</string>
    <string name="group_method1">分组方式1</string>
    <string name="group_method2">分组方式2</string>
    <string name="product_cup_double">双杯</string>
    <string name="product_cup_single">单杯</string>
    <string name="product_img2">图片</string>
    <string name="product_manager">饮品管理</string>
    <string name="product_name_cn">名称</string>
    <string name="product_operation">操作</string>
    <string name="product_order">排序</string>
    <string name="product_price2">价格</string>
    <string name="product_state">状态</string>
    <string name="product_update_time">更新日期</string>
    <string name="sure">确定</string>
    <string name="交易金额">交易金额</string>
    <string name="产品ID">产品ID</string>
    <string name="产品名称">产品名称</string>
    <string name="出冷水">出冷水</string>
    <string name="出热水">出热水</string>
    <string name="初始化">初始化</string>
    <string name="填充锅炉">填充锅炉</string>
    <string name="失败杯数">失败杯数</string>
    <string name="序号">序号</string>
    <string name="开始">开始</string>
    <string name="成功杯数">成功杯数</string>
    <string name="打开维护">打开维护</string>
    <string name="支付类型">支付类型</string>
    <string name="水路">水路</string>
    <string name="泡茶器">泡茶器</string>
    <string name="清空水箱">清空水箱</string>
    <string name="清空锅炉">清空锅炉</string>
    <string name="状态">状态</string>
    <string name="订单号">订单号</string>
    <string name="设置水量ml">设置水量（ml）</string>
    <string name="购买时间">购买时间</string>
    <string name="选择动作">选择动作</string>
    <string name="选择泡茶器">选择泡茶器</string>
</resources>