<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="@dimen/margin_normal" android:paddingBottom="@dimen/margin_normal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/序号" android:layout_weight="0.5" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_order_no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/订单号" android:layout_weight="2.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_product_id" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/canister_id" android:layout_weight="0.5" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_product_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_name_cn" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_product_price" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_price2" android:layout_weight="0.5" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_pay_type" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/支付类型" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_order_result" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/状态" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_order_finish_time" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/购买时间" android:layout_weight="1.0" style="@style/text_order" />
</LinearLayout>
