<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="@dimen/margin_normal" android:paddingBottom="@dimen/margin_normal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/序号" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_id" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/产品ID" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/产品名称" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_success" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/成功杯数" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_fail" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/失败杯数" android:layout_weight="1.0" style="@style/text_order" />
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:id="@id/tv_accord_amount" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/交易金额" android:layout_weight="1.0" style="@style/text_order" />
</LinearLayout>
