<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_normal" android:text="@string/泡茶器" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_normal">
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="@dimen/text_width_normal" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_normal" android:text="@string/选择泡茶器" android:drawableRight="@drawable/shape_arrow_right" />
        <TextView android:textSize="@dimen/font_normal" android:textColor="@color/common_text_black" android:gravity="center_vertical" android:id="@id/tv_tea_select" android:background="@drawable/rec_black_white_1dp" android:padding="@dimen/margin_small" android:layout_width="@dimen/text_width_normal" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_normal" android:text="@string/bean" android:drawableRight="@drawable/ic_arrow_bottom" />
        <TextView android:textSize="@dimen/font_normal" android:textColor="@color/common_text_black" android:gravity="center_vertical" android:background="@drawable/rec_black_white_1dp" android:paddingLeft="@dimen/margin_large" android:paddingRight="@dimen/margin_large" android:visibility="invisible" android:layout_width="@dimen/text_width_normal" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_normal" android:text="@string/bean" android:drawableRight="@drawable/ic_arrow_bottom" />
        <TextView android:visibility="invisible" android:text="@string/开始" style="@style/button_normal" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="@dimen/text_width_normal" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_normal" android:text="@string/选择动作" android:drawableRight="@drawable/shape_arrow_right" />
        <TextView android:id="@id/tv_tea_init" android:layout_marginRight="@dimen/margin_normal" android:text="@string/初始化" style="@style/button_normal" />
        <TextView android:id="@id/tv_tea_maintain" android:layout_marginRight="@dimen/margin_normal" android:text="@string/打开维护" style="@style/button_normal" />
        <TextView android:textColor="@color/black" android:gravity="center_vertical" android:background="@color/white" android:padding="@dimen/margin_small" android:visibility="invisible" android:layout_width="@dimen/text_width_normal" android:layout_height="wrap_content" android:text="100" />
    </LinearLayout>
</LinearLayout>
