<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_black_dark2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="@dimen/margin_normal">
        <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/img_icon_height_normal" android:layout_marginLeft="@dimen/margin_large" android:layout_marginRight="@dimen/margin_normal" android:src="@drawable/ic_product_press" />
        <TextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/app_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_manager" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_product_action" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RadioGroup android:orientation="horizontal" android:id="@id/rg_product_cup" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/font_normal" android:textColor="@color/white" android:id="@id/rb_product_cup_single" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_cup_single" />
        <RadioButton android:textSize="@dimen/font_normal" android:textColor="@color/white" android:id="@id/rb_product_cup_double" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:text="@string/product_cup_double" />
    </RadioGroup>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/colorPrimary" android:paddingTop="@dimen/margin_normal" android:paddingBottom="@dimen/margin_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="ID" android:layout_weight="@integer/product_weight_id" style="@style/text_canister" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/product_weight_name">
            <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_name_cn" style="@style/text_canister" />
        </LinearLayout>
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_price2" android:layout_weight="@integer/product_weight_price" style="@style/text_canister" />
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_img2" android:layout_weight="@integer/product_weight_image" style="@style/text_canister" />
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_state" android:layout_weight="@integer/product_weight_state" style="@style/text_canister" />
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_order" android:layout_weight="@integer/product_weight_order" style="@style/text_canister" />
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_update_time" android:layout_weight="@integer/product_weight_date" style="@style/text_canister" />
        <TextView android:textStyle="bold" android:textColor="@color/app_white" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_operation" android:layout_weight="@integer/product_weight_action" style="@style/text_canister" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_product" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>
