<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/cardview_normal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.jetinno.widget.HeadBar android:id="@id/headbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:backgroundColor="@color/colorPrimary" app:titleText="@string/group_method" />
        <Switch android:textSize="@dimen/font_large" android:id="@id/sv_groupmethod_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large2" android:thumb="@drawable/sel_switch_custom_thumb" android:text="@string/group_management" android:switchTextAppearance="@style/switch_normal" android:track="@drawable/sel_switch_custom_track" android:switchPadding="@dimen/margin_large2" android:showText="true" style="@style/text_canister" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/ll_groupmethod_sure" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large2">
            <CheckBox android:textSize="@dimen/font_large" android:id="@id/cb_groupmethod_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_method1" android:buttonTint="@color/white" style="@style/text_canister" />
            <RadioGroup android:orientation="vertical" android:id="@id/rg_groupmethod_1_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_50">
                <RadioButton android:textSize="@dimen/font_normal" android:textColor="@color/white" android:id="@id/rb_groupmethod_1_layout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_layou_1" android:buttonTint="@color/white" />
                <RadioButton android:textSize="@dimen/font_normal" android:textColor="@color/white" android:id="@id/rb_groupmethod_1_layout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_layou_2" android:buttonTint="@color/white" />
            </RadioGroup>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back_to_group_finish_make" style="@style/text_canister" />
                <ImageView android:id="@id/tv_switch" android:layout_width="wrap_content" android:layout_height="@dimen/font_biggest" android:layout_margin="@dimen/margin_normal" android:src="@drawable/sel_switch" style="@style/text_canister" />
            </LinearLayout>
            <CheckBox android:textSize="@dimen/font_large" android:id="@id/cb_groupmethod_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_120" android:text="@string/group_method2" android:buttonTint="@color/white" style="@style/text_canister" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TextView android:id="@id/tv_groupmethod_sure" android:layout_width="fill_parent" android:layout_marginLeft="@dimen/margin_large" android:layout_marginRight="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_large" android:text="@string/sure" android:layout_alignParentBottom="true" style="@style/button_normal" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
